Used Angular CLI for ahead of time compilation

--- a/DatingApp.API/wwwroot/index.html
+++ b/DatingApp.API/wwwroot/index.html
@@ -10,5 +10,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="scripts.js"></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+<script src="runtime-es2015.45a682f2ecb9b6828f09.js" type="module"></script><script src="polyfills-es2015.63b3ba5274df3a4ddec4.js" type="module"></script><script src="runtime-es5.5e39ee6cb68a899a6e31.js" nomodule></script><script src="polyfills-es5.fa0b8be00573edb20466.js" nomodule></script><script src="styles-es2015.e19cd3195b2e3c9c5201.js" type="module"></script><script src="styles-es5.f0215f99d086e1c44b3f.js" nomodule></script><script src="scripts.e655fe901b4d04a6e3ea.js"></script><script src="main-es2015.8b1a1e247d58e6fd7954.js" type="module"></script><script src="main-es5.7e5ab161d6725e3a626c.js" nomodule></script></body>
 </html>
